// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoAdd component: should be rendered correctly 1`] = `
<div>
  <h2
    className="u-mt-2 u-mb-half"
  >
    Add a new Todo
  </h2>
  <form
    onSubmit={[Function]}
  >
    <Label
      block={true}
      className=""
      error={false}
      htmlFor="todo-add-input"
    >
      Todo name
    </Label>
    <Input
      error={false}
      fullwidth={false}
      id="todo-add-input"
      onChange={[Function]}
      size="large"
      type="text"
      value=""
    />
    <DefaultButton
      busy={false}
      extension="narrow"
      label="add"
      size="large"
      type="submit"
    />
  </form>
</div>
`;

exports[`TodoAdd component: should handle isWorking correctly (display spinner) 1`] = `
<div>
  <h2
    className="u-mt-2 u-mb-half"
  >
    Add a new Todo
  </h2>
  <form
    onSubmit={[Function]}
  >
    <Label
      block={true}
      className=""
      error={false}
      htmlFor="todo-add-input"
    >
      Todo name
    </Label>
    <Input
      error={false}
      fullwidth={false}
      id="todo-add-input"
      onChange={[Function]}
      size="large"
      type="text"
      value=""
    />
    <DefaultButton
      busy={true}
      extension="narrow"
      label="add"
      size="large"
      type="submit"
    />
  </form>
</div>
`;
